--- a/templates/my_courses_mentee.html
+++ b/templates/my_courses_mentee.html
@@ -88,7 +88,8 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li><a class="nav-link scrollto active" href="{{ url_for('dashboard_mentee', username=username) }}">Home</a></li>
-            <li><a href="{{ url_for('my_courses', username=username,msg='') }}">My Courses</a></li>
+            <li><a  href="{{ url_for('profile_mentee', username=username,msg='') }}">Profile</a></li>
+            <li><a class="nav-link scrollto active" href="{{ url_for('my_courses', username=username,msg='') }}">My Courses</a></li>
             <li><a href="{{ url_for('logout')}}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -105,40 +106,7 @@
             <p>View all you're programs you've enrolled for.</p>
           </header>
 
-          <div class="justify-content-center align-items-center">
-            <form method="" action="">
-              <label for="filter" class="border-transparent"></label>
-
-              <select name="filter" id="filter">
-                <option value="valuation">Filter - None</option>
-                <option value="valuation">Tag A</option>
-                <option value="equity">Tag B</option>
-                <option value="investment">Tag C</option>
-                <option value="revenue">Tag D</option>
-                <option value="profit">Tag E</option>
-              </select>
-
-              <label for="sort" class="border-transparent"></label>
-
-              <select name="sort" id="sort">
-                <option value="valuation">Sort - None</option>
-                <option value="valuation">Most popular</option>
-                <option value="equity">Low to high price</option>
-                <option value="investment">High to low price</option>
-              </select>
-
-              <input
-                type=""
-                value=""
-                style="
-                  background-color: rgb(216, 237, 250);
-                  border-color: #000000;
-                  border-width: 1px;
-                "
-                placeholder="Search.."
-              />
-            </form>
-          </div>
+          
 
           <br />
 
@@ -154,7 +122,7 @@
                   <i class="bi bi-briefcase" style="color: #1985f0"></i>
                 </div>
                 
-                <h3 class="title"><a href="{{url_for('messages')}}?course_id={{course_list['course_id']}}&username={{username}}">{{ course_list['course_name'] }}</a></h3>
+                <h3 class="title"><a href="{{url_for('messages')}}?course_id={{course_list['course_id']}}&username={{username}}&viewer=mentee">{{ course_list['course_name'] }}</a></h3>
                 <h5 style="font-size: small">Course starts on : {{course_list.course_start}}</h5>
                 <h5 style="font-size: small">Course ends on : {{course_list.course_end}}</h5>
                 <h5 style="font-size: small">Price: {{course_list.course_price}} INR</h5>
