--- a/templates/profile_mentee.html
+++ b/templates/profile_mentee.html
@@ -52,9 +52,9 @@
         <h1 class="logo me-auto"><a href="/">Mentify</a></h1>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="{{url_for('dashboard_mentee', username=username)}}">Home</a></li>
-            <li><a href="{{ url_for('profile_mentee', username=username,msg='') }}">Profile</a></li>
-            <li><a href="my_courses_mentee">My Courses</a></li>
+            <li><a class="nav-link scrollto active" href="{{url_for('dashboard_mentee', username=mentee['username'])}}">Home</a></li>
+            <li><a class="nav-link scrollto active" href="{{ url_for('profile_mentee', username=mentee['username'],msg='') }}">Profile</a></li>
+            <li><a href="{{ url_for('my_courses', username=mentee['username'],msg='') }}">My Courses</a></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -67,7 +67,7 @@
       <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
           <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://img.freepik.com/premium-vector/user-profile-icon-flat-style-member-avatar-vector-illustration-isolated-background-human-permission-sign-business-concept_157943-15752.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1710028800&semt=ais"><span class="font-weight-bold">{{name}}</span><span class="text-black-50">{{username}}</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://img.freepik.com/premium-vector/user-profile-icon-flat-style-member-avatar-vector-illustration-isolated-background-human-permission-sign-business-concept_157943-15752.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1710028800&semt=ais"><span class="font-weight-bold">{{mentee.mentee_name}}</span><span class="text-black-50">{{mentee.username}}</span><span> </span></div>
           </div>
           <div class="col-md-8 border-right">
             <div class="p-3 py-5">
@@ -79,15 +79,15 @@
               </div>
                 <form action="" method="post">
                 <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels"><b>Name</label><input type="text" class="form-control" placeholder="Full Name" value="{{name}}" name="name"></div>
+                    <div class="col-md-6"><label class="labels"><b>Name</label><input type="text" class="form-control" placeholder="Full Name" value="{{mentee['mentee_name']}}" name="name"></div>
             
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Phone Number</b></label><input type="text" class="form-control" placeholder="Phone number" value="{{contact_no}}" name="contact_no"></div>
-                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Email ID</b></label><input type="text" class="form-control" placeholder="Email id" value="{{email_id}}" name="email_id"></div>
-                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Education/Experience</b></label><input type="text" class="form-control" placeholder="Institute/company" value="{{education}}" name="education"></div>
+                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Phone Number</b></label><input type="text" class="form-control" placeholder="Phone number" value="{{mentee['contact_no']}}" name="contact_no"></div>
+                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Email ID</b></label><input type="text" class="form-control" placeholder="Email id" value="{{mentee['email_id']}}" name="email_id"></div>
+                    <div class="col-md-6"><label class="labels" style="margin-top: 4%;"><b>Education/Experience</b></label><input type="text" class="form-control" placeholder="Institute/company" value="{{mentee['education']}}" name="education"></div>
                 </div>
-                <div class="col-md-12"><label class="labels" style="margin-top: 4%;"><i>What mentorship I'm looking for/Your interests</i></label><textarea type="text" name="interests" class="form-control" placeholder="Kindly tell us about what guidance you would like to find through our platform" >{{interests}}</textarea></div> <br>
+                <div class="col-md-12"><label class="labels" style="margin-top: 4%;"><i>What mentorship I'm looking for/Your interests</i></label><textarea type="text" name="interests" class="form-control" placeholder="Kindly tell us about what guidance you would like to find through our platform" >{{mentee.interests}}</textarea></div> <br>
                 <p>Kindly select relevant tags for the course</p>
                                 
                 
