--- a/templates/resolve_ticket.html
+++ b/templates/resolve_ticket.html
@@ -49,13 +49,12 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto" href="{{ url_for('dashboard_mentee', username=username) }}">Home</a>
+              <a class="nav-link scrollto" href="/">Home</a>
             </li>
             
-            </li>
-            <li><a href="{{ url_for('profile_mentee', username=username,msg='') }}">Profile</a></li>
-            <li><a href="{{ url_for('my_courses', username=username,msg='') }}">My Courses</a></li>
-            <li><a href="{{ url_for('logout')}}">Logout</a></li>
+            <li><a href="/">Profile</a></li>
+            <li><a href="/">My Courses</a></li>
+            <li><a href="">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -67,34 +66,23 @@
       <section id="services" class="services section-bg" style="margin-top: 5%">
         <div class="container" data-aos="fade-up">
           <header class="section-header">
-            <h3>Feedback Form</h3>
+            <h3>Raise a complaint</h3>
+            <h5>{{msg}}</h5>
             <p>
-              Kindly provide us with feedback for the mentor and any other comments. It will help us improve our services.
+              Complaint Raised
             </p>
         </header>
 
-    <div class="container mt-3 mb-3" style="background-color: #c2c3ff; text-align: center;">
-        <div class="col-md-12" style="font-size: medium;">
+    <div class="container mt-3 mb-3" style="background-color: #d0f5ff">
+        <div class="col-md-12">
             <div class="p-3 py-5">
-                <form action="" method="POST">
-                  <input type="hidden" name="course_id" value="{{ course_id }}">
-                <div class="row mt-2">
-                    
-                    <div class="col-md-12"><label class="labels"><b>Overall Rating</b></label></div>
-
-                    <div class="rating">
-
-                    <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
-                    <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
-                    <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
-                    <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
-                    <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
-
-                    </div>
-
+                <div class="d-flex justify-content-center align-items-center mb-3 text">
+                    <h2 style="text-align: center;">Resolve Complaint</h2>
                 </div>
-
-                <div class="col-md-12"><label class="labels" style="margin-top: 4%;">Any more additional comments</label><textarea type="text" class="form-control" placeholder="Enter comments"></textarea></div> <br>
+                <form action="" method="POST">
+                    <div class="col-md-12"><label class="labels"><b>Complaint ID</b></label><input type="text" class="form-control" placeholder="Complaint ID" value="{{complaint.complaint_id}}" name="complaint_id" readonly></div>
+                <div class="col-md-12"><label class="labels" style="margin-top: 4%;"><i>Description of the problem</i></label><textarea type="text" class="form-control" placeholder="Kindly tell us about the issue at hand." name="complaint_desc" readonly>{{complaint.complaint_desc}}</textarea></div> <br>
+                <div class="col-md-12"><label class="labels" style="margin-top: 4%;"><i>Action on the problem</i></label><textarea type="text" class="form-control" placeholder="Take action" name="complaint_action" ></textarea></div> <br>
 
                 <div class="mt-5 text-center"><button class="btn profile-button" type="submit" style="color: #ffffff;">Submit</button></div>
                 </form>
@@ -102,6 +90,7 @@
         </div>
     </div>
       </section>
+      <!-- End Services Section -->
     </main>
 
     <!-- ======= Footer ======= -->
